# pdx

./: .gitignore  Untitled.ipynb  changelog.md  dev_notes.md  examples.ipynb  makefile  pyproject.toml  readme.md
notebooks/: examples.ipynb  from_first.ipynb  pandas_helpers.ipynb
notebooks/from_file/: from_file.ipynb  long.sql  short.sql
src/pdq/: __init__.py  _pandas.py  _query.py  query.py
src/pdx/: __init__.py  _data.py  _get_params.py  _io.py  _pandas.py  _query.py  _util.py  util.py
tests/: test_get_params.py  test_imports.py  test_io.py  test_pandas_helpers.py
tests/from_file/: long.sql  short.sql  test_from_file.py
