[project]
name = 'pdquery'
version = '0.0.1'

dependencies = [
  'pandas >= 1.0',
  'duckdb',
  'prql-python',
]

[project.optional-dependencies]
dev = [
    'pytest'
]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations=10'
testpaths = [
    'tests',
]

# hatchling is kind of nice because it avoids leaving around all
# that .egg_info baloney
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
