[project]
name = 'pdq'
version = '0.0.1'

dependencies = [
  'pandas >= 1.0',
  'duckdb >= 0.5',
  'prql-python >= 0.2',
]

[project.optional-dependencies]
dev = [
    'pytest >= 7.0'
]

[tool.pytest.ini_options]
# minversion = '7.0'
addopts = '--durations=10'
testpaths = [
    'tests',
]

# hatchling is kind of nice because it avoids leaving around all
# that .egg_info baloney
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'


